tests/NormalTests/paczka1/fuzzy1/41973511.err
Error in line 3: A40 A40 46,5
Error in line 14: THjRb1K A40 92,1
Error in line 8: gOS A40 36,3
Error in line 20: IgJmXT S308 95,9
Error in line 28: A40 S08 249,9
Error in line 15: THjRb1K S915 82,8
Error in line 34: IgJmXT S308 40,6
